--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
@@ -48,5 +49,8 @@
   },
   "devDependencies": {
     "@types/react-router-bootstrap": "^0.26.0"
+  },
+  "react-dotenv": {
+    "whitelist": ["API_URL"]
   }
 }
